--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-discord.py>=1.6.0
-aiohttp>=3.7.3
-youtube-dl>=2021.02.22
+discord.py==1.7.3
+aiohttp==3.7.4.post0
+youtube-dl==2021.6.6
+MusicBot==0.4.0
